Styling fixes on mobile

--- a/css/mobile/baconbar-mobile.css
+++ b/css/mobile/baconbar-mobile.css
@@ -1,17 +1,21 @@
 ﻿/* Highest Level Elements */
 html, body { margin: 0px; padding: 0px; }
-body { background: url(../../img/core/feed-burke-woodbg.png) repeat 0px 0px; color: #F7A08F; }
+body { background: url(../../img/core/feed-burke-woodbg.png) repeat 0px 0px; color: #F7A08F; font-family: Arial; }
+a:link { color: #F7A08F; text-decoration: none; }
+a:visited { color: #F7A08F; text-decoration: none; }
+img { border: 0px; }
 input[type="text"] { background-color: #FCD7CE; border: none; color: #481301; font-size: 24px; margin: 5px auto; padding: 5px 20px; width: 80%; }
 
 /* Header */
 header#primary { font-family: "Frutiger LT W01 65 Bold"; margin: 0px auto; padding: 20px 0px 10px; text-align: center; width: 100%; }
 header#primary div.address-info { background-color: #401502; margin: 10px 0px 10px; padding: 10px 0px; text-transform: uppercase; }
 header#primary div.address-info span.divider { padding: 0px 5px; }
-header#primary div.hero { height: 350px; position: relative; }
+header#primary div.hero { height: 334px; position: relative; }
 header#primary div.hero div.gallery { height: 100%; }
 header#primary div.hero div.gallery img { height: 100%; width: 100%; }
 header#primary div.specials-container { height: 50px; }
 header#primary div.specials { color: #FFF; float: right; font-family: "TradeGothicW01-BoldExte"; padding: 5px 10px; }
+header#primary div.specials img { height: 35px; width: 35px; }
 header#primary div.specials span.follow { vertical-align: super; }
 header#primary div.place-order a:link { background-color: #F7A08F; color: #401502; display: block; font-family: "TradeGothicW01-BoldExte"; font-size: 30px; font-weight: bold; margin: 0px auto; padding: 15px 0px; text-decoration: none; text-transform: uppercase; width: 70%; }
 
@@ -19,10 +23,11 @@ header#primary div.place-order a:link { background-color: #F7A08F; color: #40150
 div#main { font-family: "TradeGothicW01-BoldExte"; }
 div#main nav>div { color: #F7A08F; margin: 15px 0px; padding: 10px 0px; }
 div#main div.header { background-color: #401502; cursor: pointer; font-size: 34px; padding: 20px 0px; text-align: center; text-transform: uppercase; }
-div#main div.content { color: #FFF; display: none; margin: 10px auto; width: 90%; }
+div#main div.content { color: #FFF; display: none; font-size: 24px; margin: 10px auto; width: 90%; }
 div#main div.content div.gmap { height: 400px; margin: 10px 0px; width: 100%; }
 div#main div.content span.about { display: inline-block; width: 70%; }
-div#main div.content span.portrait { display: inline-block; padding: 5px 0px; vertical-align: top; width: 148px; }
+div#main div.content span.portrait { display: inline-block; padding: 5px 0px; vertical-align: top; width: 28%; }
+div#main div.content span.portrait img { width: 100%; }
 div#main div.content div.contact-form>div { margin: 5px 0px; text-align: center; }
 div#main div.content div.contact-form>div a:link { background: #F7A08F url('../../img/core/signup-submit-bttn.gif') no-repeat 0px 0px; color: #401502; display: block; font-family: "TradeGothicW01-BoldExte"; font-size: 22px; font-weight: bold; margin: 10px auto; padding: 0px 0px 0px 60px; text-align: left; text-decoration: none; width: 50%; }
 
@@ -53,3 +58,15 @@ div.contact-form div.last-name-validation,
 div.contact-form div.email-validation,
 div.contact-form div.name-validation,
 div.contact-form div.phone-validation { color: #FFF; display: none; padding: 0px; }
+
+/* Media Queries to adjust elements based on screen size */
+@media screen and (min-width: 800px)  
+{
+    header#primary div.hero { height: 417px; }
+}
+
+/* Media Queries to adjust elements based on screen size */
+@media screen and (min-width: 960px)  
+{
+    header#primary div.hero { height: 501px; }
+}
